// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Editing > Daily notes > * Moves a nested task with text between notes
* Does not touch invalid markdown
* Undoes the move 1`] = `
{
  "fixtures/fixture-vault/2025-07-20.md": "
+ # Day planner
+ 
+ - [ ] 17:00 - 17:30 Child task
+   Child text
+     - Child list item without time
",
  "fixtures/fixture-vault/2025-07-28.md": "
- - [ ] 10:00 - 11:00 Before
...
-     - [ ] Child task
-       Child text
-         - Child list item without time
+ - [ ] 10:00 - 11:00 Before
",
}
`;

exports[`Editing > Daily notes > Creates tasks 1`] = `
{
  "fixtures/fixture-vault/2025-07-20.md": "
+ # Day planner
+ 
+ - [ ] 13:00 - 14:00 Text input
",
}
`;

exports[`Editing > Daily notes > Edits tasks 1`] = `
{
  "fixtures/fixture-vault/2025-07-19.md": "
- - 11:00 - 11:30 List item under planner heading
+ - 17:00 - 17:30 List item under planner heading
",
}
`;

exports[`Editing > Daily notes > Moves a parent task with its nested subtree between notes 1`] = `
{
  "fixtures/fixture-vault/2025-07-19.md": "
+ - [ ] 10:00 - 11:00 Parent
+   Parent text
+     - [ ] Child task
+       Child text
+         - Child list item without time
...
- ---
+ ***
",
  "fixtures/fixture-vault/2025-07-28.md": "
- - [ ] 09:00 - 10:00 Parent
-   Parent text
-     - [ ] Child task
-       Child text
-         - Child list item without time
",
}
`;

exports[`Editing > Daily notes > Un-schedules tasks 1`] = `
{
  "fixtures/fixture-vault/2025-07-19.md": "
- - 11:00 - 11:30 List item under planner heading
+ - List item under planner heading
",
}
`;

exports[`Editing > Dataview > Schedules tasks ('brackets') 1`] = `
{
  "fixtures/fixture-vault/tasks.md": "
- - [ ] Task with Dataview \`scheduled\` prop in brackets [scheduled:: 2025-07-19]
+ - [ ] 13:00 - 14:00 Task with Dataview \`scheduled\` prop in brackets [scheduled:: 2025-07-19]
",
}
`;

exports[`Editing > Dataview > Schedules tasks ('parens') 1`] = `
{
  "fixtures/fixture-vault/tasks.md": "
- - [ ] Task with Dataview \`scheduled\` prop in parens (scheduled:: 2025-07-19)
+ - [ ] 13:00 - 14:00 Task with Dataview \`scheduled\` prop in parens (scheduled:: 2025-07-19)
",
}
`;

exports[`Editing > Dataview > Unschedules tasks ('brackets') 1`] = `
{
  "fixtures/fixture-vault/tasks.md": "
- - [ ] 11:00 - 11:30 Task with timestamp and Dataview \`scheduled\` prop in brackets [scheduled:: 2025-07-19]
+ - [ ] Task with timestamp and Dataview \`scheduled\` prop in brackets [scheduled:: 2025-07-19]
",
}
`;

exports[`Editing > Dataview > Unschedules tasks ('parens') 1`] = `
{
  "fixtures/fixture-vault/tasks.md": "
- - [ ] 12:00 - 12:30 Task with timestamp and Dataview \`scheduled\` prop in parens (scheduled:: 2025-07-19)
+ - [ ] Task with timestamp and Dataview \`scheduled\` prop in parens (scheduled:: 2025-07-19)
",
}
`;

exports[`Editing > Obsidian-tasks > Schedules tasks 1`] = `
{
  "fixtures/fixture-vault/tasks.md": "
- - [x] Task without time ⏳ 2025-07-19
+ - [x] 13:00 - 14:00 Task without time ⏳ 2025-07-19
",
}
`;

exports[`Editing > Obsidian-tasks > Unschedules tasks 1`] = `
{
  "fixtures/fixture-vault/tasks.md": "
- - [ ] 10:00 - 10:30 Task with time ⏳ 2025-07-19
+ - [ ] Task with time ⏳ 2025-07-19
",
}
`;

exports[`Editing > Obsidian-tasks > Updates tasks plugin props without duplicating timestamps if moved to same time on another day 1`] = `
{
  "fixtures/fixture-vault/tasks.md": "
- - [ ] 10:00 - 10:30 Task with time ⏳ 2025-07-19
+ - [ ] 10:00 - 10:30 Task with time ⏳ 2025-07-28
",
}
`;
